--- a/app/src/main/res/drawable/ripple_effect_red.xml
+++ b/app/src/main/res/drawable/ripple_effect_red.xml
@@ -9,7 +9,7 @@
     </item>
     <item android:id="@android:id/mask">
         <shape android:shape="rectangle">
-            <solid android:color="#D8D5D5" /> <!-- Ripple color (gray) -->
+            <solid android:color="@color/lightwhite" /> <!-- Ripple color (gray) -->
             <corners android:radius="15dp" /> <!-- Match the radius with the background shape -->
         </shape>
     </item>
