--- a/app/src/main/res/layout/activity_welcome_splash.xml
+++ b/app/src/main/res/layout/activity_welcome_splash.xml
@@ -10,10 +10,10 @@
         android:id="@+id/come"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="104dp"
+        android:layout_marginEnd="76dp"
         android:fontFamily="@font/akaya_telivigala"
         android:padding="10dp"
-        android:text="@string/come"
+        android:text="@string/notes"
         android:textColor="@color/red"
         android:textSize="50sp"
         android:textStyle="bold"
@@ -25,10 +25,10 @@
         android:id="@+id/wel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="88dp"
+        android:layout_marginStart="108dp"
         android:fontFamily="@font/akaya_telivigala"
         android:padding="10dp"
-        android:text="@string/Welome"
+        android:text="@string/my"
         android:textColor="@color/black"
         android:textSize="50sp"
         android:textStyle="bold"
@@ -64,6 +64,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
+        android:id="@+id/imageView2"
         android:layout_width="131dp"
         android:layout_height="131dp"
         android:layout_marginTop="148dp"
@@ -72,5 +73,20 @@
         app:layout_constraintHorizontal_bias="0.81"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/come" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:text="@string/plain_your_life"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/imageView2"
+        app:layout_constraintEnd_toEndOf="@+id/come"
+        app:layout_constraintHorizontal_bias="0.489"
+        app:layout_constraintStart_toStartOf="@+id/wel"
+        app:layout_constraintTop_toBottomOf="@+id/wel"
+        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
