--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="white">#FFFFFF</color>
     <color name="red">#FD0000</color>
-
+    <color name="lightwhite">#D8D5D5</color>
+    <color name="darkred">#C80000</color>
+    <color name="grey">#FAF8F8</color>
+    <color name="lightgrey">#F8F6F6</color>
 </resources>
