--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="darkred">#C80000</color>
     <color name="grey">#FAF8F8</color>
     <color name="lightgrey">#F8F6F6</color>
+    <color name="green">#02A102</color>
 </resources>
