--- a/app/src/main/res/layout/noteitems.xml
+++ b/app/src/main/res/layout/noteitems.xml
@@ -1,31 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@color/white"
+    android:padding="20dp"
+    app:cardElevation="10dp">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:elevation="10dp"
+        android:layout_width="345dp"
+        android:layout_height="173dp"
         android:layout_margin="15dp"
-        android:padding="6dp"
         android:background="@drawable/roundnoteitems"
-        android:layout_height="wrap_content"
+        android:elevation="10dp"
+
+        android:padding="10dp"
         app:cardElevation="10dp">
+
+        <TextView
+            android:id="@+id/calenderDateTimeText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding = "5dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.018"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/rdescription"
+            app:layout_constraintVertical_bias="0.6" />
 
         <TextView
             android:id="@+id/rtitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="28dp"
+            android:layout_marginTop="16dp"
             android:padding="10dp"
             android:text="@string/title"
             android:textColor="@color/red"
             android:textSize="24sp"
             android:textStyle="bold"
-            app:layout_constraintEnd_toStartOf="@+id/update"
-            app:layout_constraintHorizontal_bias="0.055"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.023"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -33,39 +50,46 @@
             android:id="@+id/rdescription"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
+            android:layout_marginTop="4dp"
             android:padding="10dp"
             android:text="@string/description"
             android:textColor="@color/black"
             android:textSize="20sp"
             android:textStyle="normal"
-            app:layout_constraintEnd_toEndOf="@+id/rtitle"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/rtitle"
             app:layout_constraintTop_toBottomOf="@+id/rtitle" />
 
-        <ImageView
-            android:id="@+id/delete"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:background="@drawable/trash"
-            android:backgroundTint="@color/darkred"
-            android:padding="10dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/update"
-            app:layout_constraintStart_toStartOf="@+id/update"
-            app:layout_constraintTop_toBottomOf="@+id/update" />
-
-        <ImageView
-            android:id="@+id/update"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginTop="48dp"
-            android:layout_marginEnd="24dp"
-            android:background="@drawable/changes"
-            android:backgroundTint="@color/black"
-            android:padding="10dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <ImageView
+        android:id="@+id/update"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="370dp"
+        android:layout_marginTop="45dp"
+        android:background="@drawable/changes"
+        android:backgroundTint="@color/black"
+        android:padding="20dp" />
+
+    <ImageView
+        android:id="@+id/delete"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="370dp"
+        android:layout_marginTop="85dp"
+        android:background="@drawable/trash"
+        android:backgroundTint="@color/darkred"
+        android:padding="20dp" />
+
+    <ImageView
+        android:id="@+id/share"
+        android:layout_width="28dp"
+        android:layout_height="28dp"
+        android:layout_marginStart="370dp"
+        android:layout_marginTop="120dp"
+        android:background="@drawable/share"
+        android:backgroundTint="@color/green"
+        android:padding="20dp" />
 </com.google.android.material.card.MaterialCardView>
