--- a/app/src/main/res/menu/menues.xml
+++ b/app/src/main/res/menu/menues.xml
@@ -3,4 +3,6 @@
 <item android:id="@+id/logout"
     android:title="@string/log_out"
     />
+<item android:id="@+id/multilanguage"
+    android:title="@string/languages"/>
 </menu>
